--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "antd": "^4.20.7",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
