--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.7",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "clarifai": "^2.9.1",
+    "face-api.js": "^0.22.2",
     "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
