--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-webcam": "^7.0.1",
     "styled-components": "^5.3.5",
+    "tesseract.js": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
