--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clarifai": "^2.9.1",
     "face-api.js": "^0.22.2",
     "firebase": "^9.8.2",
+    "qrcode": "^1.5.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -22,6 +23,7 @@
     "react-webcam": "^7.0.1",
     "styled-components": "^5.3.5",
     "tesseract.js": "^2.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
